Fix subnavbar form width on Firefox

--- a/less/etalab.less
+++ b/less/etalab.less
@@ -81,6 +81,10 @@ a.thumbnail-link {
     background-color: lighten(@bg-dark, 10%);
     z-index: 800;
 
+    form {
+        width: 100%;
+    }
+
     input[type="search"] {
         color: white;
         background-color: @bg-darker;
